[build-system]
requires = [ "setuptools>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "buildbot-badges"
version = "2.9.4"
description = "Fork of buildbot-badges with support for specifying builders by name."
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/buildbot-badges"
"Issue Tracker" = "https://github.com/domdfcoding/buildbot-badges/issues"
"Source Code" = "https://github.com/domdfcoding/buildbot-badges"

[tool.importcheck]

[project.entry-points."buildbot.www"]
badges = "buildbot_badges:ep"
