# This file is managed by 'repo_helper'.
# You may add new sections, but any changes made to the following sections will be lost:
#     * metadata
#     * options
#     * options.packages.find
#     * mypy
#     * options.entry_points

[metadata]
name = buildbot-badges
version = 2.9.4
author = Dominic Davis-Foster
author_email = dominic@davis-foster.co.uk
license = GNU General Public License v2 (GPLv2)
keywords =
long_description = file: README.rst
long_description_content_type = text/x-rst
platforms = Windows, macOS, Linux
url = https://github.com/domdfcoding/buildbot-badges
project_urls =
    Issue Tracker = https://github.com/domdfcoding/buildbot-badges/issues
    Source Code = https://github.com/domdfcoding/buildbot-badges
classifiers =
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
python_requires = >=3.6.1
zip_safe = False
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    doc-source
    tests
    tests.*

[options.entry_points]
buildbot.www = badges = buildbot_badges:ep
